src/components/ExpenseList.scss
.ExpenseList {
  @import '~styles/variables';
  .header {
    background: $cyan;

    p {
      color: white;
    }
  }

  .expense-item {
    &:nth-child(2n) {
      background: $grey-lighter;
    }

    &:nth-child(2n+1) {
      background: $white-ter;
    }
  }
}

